<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearRegister"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" style="@style/groupStylewhite_A700">
    <FrameLayout android:id="@+id/frameViewProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageImage"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:background="@drawable/img_group_129"
            tools:ignore="ContentDescription" />
        <LinearLayout android:id="@+id/linearColumnarrowdown"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_19pxv" android:paddingTop="@dimen/_19pxv">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/amber_500_02" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowdown"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:weightSum="10"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowdownOne"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:src="@drawable/img_arrow_down_black_900"
                        android:layout_weight="1"
                        tools:ignore="ContentDescription" android:layout_gravity="center_vertical"/>
                    <TextView
                        android:id="@+id/txtWorkshop"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:text="@string/lbl_profile"
                        style="@style/txtPoppinssemibold18" android:textAlignment="center"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_person_24"/>

            <TextView
                android:id="@+id/txtName"
                style="@style/txtPoppinsmedium14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_name"
                android:textColor="@color/black_900" />
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_muhammed_suhail"
                android:id="@+id/etName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_62pxh"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_muhammed_suhail"
                android:textColorHint="@color/black_900"
                style="@style/etPoppinsregular13" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:textColor="@color/black_900"
                style="@style/txtPoppinsmedium14" android:text="@string/lbl_email"/>
            <EditText android:ellipsize="end"
                android:hint="@string/lbl_muhammed_suhail"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_62pxh"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_email_address"
                android:textColorHint="@color/black_900"
                style="@style/etPoppinsregular13" tools:ignore="Autofill"/>

            <View android:id="@+id/viewViewOne"
                android:layout_height="@dimen/_102pxh" android:layout_width="@dimen/_144pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEditProfile"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_40pxv"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/_8pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_8pxv"
                android:singleLine="true"
                android:text="@string/lbl_edit_profile"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_edit_profile"/>
            <View android:id="@+id/viewViewTwo"
                android:layout_height="@dimen/_211pxh" android:layout_width="@dimen/_144pxh"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
